Basic working 2.5d sim with navigation